Remove files that are need not VCS.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /proj.ios/InterfaceShare.h
 /proj.ios/ShareWrapper.h
+/proj.android/build_common.xml
+/proj.android/proj.android
+/proj.android/protocols
+/proj.android/protocolsproject.properties
+/proj.android/tools
+/proj.android/gen/R.java.d
+/proj.android/bin/libPluginSocialTwitter.jar
+/proj.android/bin/classes
+
