Write setup.sh for android.

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 /proj.android/gen/R.java.d
 /proj.android/bin/libPluginSocialTwitter.jar
 /proj.android/bin/classes
-
+/twitter4j-4.0.4.zip
+/proj.android/twitter4j
