--- a/proj.android/project.properties
+++ b/proj.android/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-7
 android.library=true
-android.library.reference.1=../../../protocols/proj.android
+#android.library.reference.1=../../../protocols/proj.android
+android.library.reference.1=./protocols
